[package]
name = "modular_dao"
version = "1.0.0"
authors = ["LiberumDAO <email@liberumdao.net>"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag = "3.0.0", default-features = false, features = [
	"psp22",
	"psp34",
	"psp37",
	"access_control",
] }


[lib]
name = "modular_dao"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
	"ink/std",

	"scale/std",
	"scale-info",
	"scale-info/std",

	"openbrush/std",
]

ink-as-dependency = []

[workspace]
members = ["contracts/*"]

[profile.dev]
codegen-units = 16
