[package]
name = "strategy_whitelist"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0-beta", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag = "3.0.0-beta.1", default-features = false, features = [
	"psp22",
	"psp34",
	"psp37",
	"ownable",
	"pausable",
	"access_control",
] }
modular_dao = {path = "../..", default-features = false }
[lib]
name = "strategy_whitelist"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
	"ink/std",

	"scale/std",
	"scale-info",
	"scale-info/std",

    "modular_dao/std",
	"openbrush/std",
]
ink-as-dependency = []

